# serial-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FEATURES.md  ISSUES.md  PLAN.md  README.md  REFACTOR_PLAN.md  SPECIFICATION_COMPLIANCE.md  TECHNICAL_DEBT.md  build.rs  flake.nix  lint-examples.sh  opencode.json  server.json
.cargo/: config.toml
.github/workflows/: ci.yml  publish-mcp-registry.yml  release.yml  schema-drift.yml
docs/: SIMULATION_MATRIX.md  SOFTWARE_ONLY_TEST_MIGRATION_PLAN.md  TEST-PLAN.md  TESTING.md  TESTING_GAPS.md  TEST_BUILD_UNIFICATION_PLAN.md  agent-config.md  nrf5340-audio-test-guide.md
docs/development/: FEATURES.md  FRAME_PIPELINE_HARDENING_PLAN.md  FRAME_PIPELINE_PLAN.md  PHASE1_RECAP.md  PHASE1_RX_TX_FRAMING_HANDOFF.md  PHASE2_FOLLOWUP_SUBSCRIBE_BARE_CR_TEST_HANDOFF.md  PHASE2_LINE_AUTO_BARE_CR_HANDOFF.md  PHASE2_RECAP.md  PHASE3_FOLLOWUP_SLIP_RESYNC_TEST_HANDOFF.md  PHASE3_RECAP.md  PHASE3_SLIP_HANDOFF.md  PHASE4A_PARSER_RELOCATION_HANDOFF.md  PHASE4B_FOLLOWUP2_PRESET_TAG_FIX_HANDOFF.md  PHASE4B_FOLLOWUP_PRESET_OVERRIDE_TESTS_HANDOFF.md  PHASE4B_PROTOCOL_PRESETS_HANDOFF.md  PHASE5_FOLLOWUP_CONNECTION_DEFAULT_E2E_TESTS_HANDOFF.md  PHASE5_PROFILE_DEFAULTS_HANDOFF.md  PHASE6_FOLLOWUP2_REMAINING_FRAMING_E2E_HANDOFF.md  PHASE6_FOLLOWUP_FRAMING_E2E_COVERAGE_HANDOFF.md  TECHNICAL_DEBT.md  TECH_DEBT.md  TESTING_GAPS.md
docs/plans/: CLEANUP.md  PLAN-1-subscribe.md  PLAN-2-result-metadata.md  PLAN-3-buffer-budgets.md  PLAN-4-no-new-rx-timeout.md  PLAN-5-event-context.md  README.md
example-configs/: claude_code.json  claude_desktop.json  codex.json  opencode.json
examples/: cursor.json  opencode.json  zed.json
examples/configs/: claude_code.json  claude_desktop.json  cursor.json  opencode.json  vscode.json  zed.json
firmware/: .clangd  AGENTS.md  CMakeLists.txt  UF2_BOOTLOADER_PLAN.md  UNIFIED_FIRMWARE_PLAN.md  ZEPHYR_EMULATION_RESEARCH.md  pm_static.yml  prj.conf
firmware/boards/: native_sim.conf  native_sim_usb.conf  native_sim_usb.overlay  xiao_ble.conf  xiao_ble_usb.conf  xiao_ble_usb.overlay
firmware/config/: plain.conf  usb.conf
firmware/snippets/plain/: snippet.yml
firmware/snippets/usb/: snippet.yml
firmware/src/: command.c  command.h  main.c  uart_drv.c  uart_drv.h  usb_cdc.c  usb_cdc.h
fuzz/: Cargo.toml  run.sh
fuzz/fuzz_targets/: clamp_bounds.rs  codec_roundtrip.rs  tool_call_json.rs
scripts/: install-hooks.sh  opencode-mcp-clean-env  pre-push  update-config-schemas.sh
src/: buffer_budget.rs  codec.rs  error.rs  flex_deserialize.rs  framing.rs  handler.rs  lib.rs  limits.rs  log_buffer.rs  main.rs  match_config.rs  precedence.rs  profiles.rs  rx_metadata.rs  rx_session.rs  schema_helpers.rs  security.rs  serial.rs  server.rs  stop_controller.rs  tx_session.rs  util.rs
src/prompts/: diagnose.rs  interactive.rs  mod.rs  types.rs
src/resources/: mod.rs
src/tools/: control_ops.rs  helpers.rs  io_ops.rs  mod.rs  pattern_ops.rs  port_ops.rs  rx_consume.rs  stream_ops.rs  types.rs
tests/: allowlist.rs  blob_resources.rs  bootloader_touch_emulated.rs  config_schema_validation.rs  e83_live_validation.rs  hardware_loopback.rs  http_integration.rs  native_sim_connection_lifecycle.rs  native_sim_validation.rs  proptest.rs  protocol_emulator.rs  protocol_emulator_binary.rs  resource_subscriptions.rs  serial_pty.rs  stdio_integration.rs  tx_session.rs  xiao_ble_validation.rs
tests/common/: binaries.rs  firmware.rs  mod.rs  spawned.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+2 files in other folders)
