[package]
name = "serial-mcp"
version = "0.6.0"
edition = "2021"
authors = [
    "Thomas Kirschner <thomaskirschner85@yahoo.de>",
]
description = "MCP server for serial port communication. 22 tools (list/open/read/write/subscribe/get_status/reconfigure/list_profiles/open_profile/save_profile/delete_profile/get_log/clear_log/export_log/reconnect/...), resources, prompts, task cancellation, stdio + streamable-HTTP transports."
license = "MIT"
readme = "README.md"
repository = "https://github.com/qarnet/serial-mcp"
keywords = ["mcp", "serial", "communication", "embedded", "protocol"]
categories = ["development-tools", "embedded"]

[dependencies]
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "schemars"] }
serialport = { version = "4.5", features = ["usbportinfo-interface"] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "signal", "net"] }
tokio-serial = "5.4"
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
hex = "0.4"
base64 = "0.22"
axum = "0.8"
glob = "0.3"
regex = "1"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
toml = "0.8"
dirs = "6"
tempfile = "3"

[[bin]]
name = "serial-mcp"
path = "src/main.rs"

[lib]
name = "serial_mcp"
path = "src/lib.rs"

[dev-dependencies]
rmcp = { version = "1.7", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-child-process"] }
tokio = { version = "1.41", features = ["process", "fs"] }
anyhow = "1.0"
proptest = "1.6"
proptest-derive = "0.5"
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
jsonschema = "0.26"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
mutants = "0.0.4"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["term", "fs"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mutants)'] }
